Free disk space before running product tests